--- a/app/client/index.html
+++ b/app/client/index.html
@@ -1,10 +1,17 @@
-<html>
+<html ng-app="goat" ng-controller="GoatController as goat">
 <head>
-    <link rel="stylesheet" href="dist/client.min.css">
-    <script type="text/javascript" src="dist/client.min.js"></script>
+    <!--<link rel="stylesheet" href="dist/client.min.css">-->
+    <!--<script type="text/javascript" src="dist/client.min.js"></script>-->
+
+    <link rel="stylesheet" href="bower/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="client.css">
+
+    <script type="text/javascript" src="bower/lodash/dist/lodash.js"></script>
+    <script type="text/javascript" src="bower/angular/angular.js"></script>
+    <script type="text/javascript" src="client.js"></script>
 </head>
 <body>
-<div ng-app="song" ng-controller="SongController as song">
+<div>
     <div class="container">
         <table class="table">
             <thead>
@@ -20,12 +27,17 @@
                 <td>{{title}}</td>
             </tr>
         </table>
-        <div class="navbar navbar-fixed-bottom">
-            <button type="button" class="btn btn-default btn-lg" ng-click="song.debug()">
+        <div ng-show="isNodeWebkit" class="navbar navbar-fixed-bottom">
+            <button type="button" class="btn btn-default btn-lg" ng-click="goat.debug()">
                 Debug
             </button>
         </div>
     </div>
+</div>
+<div ng-if="isNodeWebkit">
+    <script type="text/javascript">
+        require('../server/server.js');
+    </script>
 </div>
 </body>
 </html>
