--- a/app/client/index.html
+++ b/app/client/index.html
@@ -12,6 +12,13 @@
     <script type="text/javascript" src="client.js"></script>
 </head>
 <body>
+    <div class="navbar-fixed-top player-controls">
+        <div class="container" style="margin: 10px;">
+            <button ng-click="goat.clickedPlay()" class="btn btn-default btn-lg">
+                <span class="glyphicon glyphicon-{{playState}}"></span>
+            </button>
+        </div>
+    </div>
     <div class="container">
         <table class="table">
             <thead>
