Factor audio output and media stream into own services
* Browserify websocket-stream and try out browserify in standalone mode
* Also expose all Stream prototypes to the global window scope (don't
want to do require() and browserify everything yet)
* Move all bower components to vendor/
* Change to process instead of require for node-webkit detection because
of browserify
* Build basic directives for player controls based on the state of
MediaPlayer
* Start to factor client.js into components (still not done)
* Add a toggle-button directive for play, mute, star buttons
* Known bug in play/pause -- not accurately starting and stopping at the
same location in the song
* Still unsure about directives vs. controllers in angular. Seems like
an awful lot of glue

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -1,22 +1,23 @@
-<html ng-app="goat" ng-controller="GoatController as goat">
+<!DOCTYPE html>
+<html ng-app="goat" ng-controller="GoatController">
 <head>
     <!--<link rel="stylesheet" href="dist/client.min.css">-->
     <!--<script type="text/javascript" src="dist/client.min.js"></script>-->
 
-    <link rel="stylesheet" href="bower/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="client.css">
 
-    <script type="text/javascript" src="bower/lodash/dist/lodash.js"></script>
-    <script type="text/javascript" src="bower/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="bower/angular/angular.js"></script>
+    <script type="text/javascript" src="vendor/websocket-stream/websocket-stream.js"></script>
+    <script type="text/javascript" src="vendor/lodash/dist/lodash.js"></script>
+    <script type="text/javascript" src="vendor/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="vendor/angular/angular.js"></script>
+    <script type="text/javascript" src="services/audio-output.js"></script>
     <script type="text/javascript" src="client.js"></script>
 </head>
 <body>
-    <div class="navbar-fixed-top player-controls">
-        <div class="container" style="margin: 10px;">
-            <button ng-click="goat.clickedPlay()" class="btn btn-default btn-lg">
-                <span class="glyphicon glyphicon-{{playState}}"></span>
-            </button>
+    <div class="navbar navbar-fixed-top">
+        <div class="container">
+            <player player="player" size="m" />
         </div>
     </div>
     <div class="container">
