--- a/app/client/index.html
+++ b/app/client/index.html
@@ -4,8 +4,8 @@
     <!--<link rel="stylesheet" href="dist/client.min.css">-->
     <!--<script type="text/javascript" src="dist/client.min.js"></script>-->
 
-    <link rel="stylesheet" href="components/vendor/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="components/client.css">
+    <!--<link rel="stylesheet/less" type="text/css" href="components/vendor/bootstrap/less/bootstrap.less">-->
+    <link rel="stylesheet/less" type="text/css" href="components/client.less">
 
     <script type="text/javascript" src="components/vendor/websocket-stream/websocket-stream.js"></script>
     <script type="text/javascript" src="services/audio-output.js"></script>
@@ -13,6 +13,13 @@
     <script type="text/javascript" src="components/vendor/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="components/vendor/angular/angular.js"></script>
     <script type="text/javascript" src="components/client.js"></script>
+
+    <script type="text/javascript" src="components/vendor/less/less.js"></script>
+    <script>
+        less.modifyVars({
+            '@icon-font-path': "'/components/vendor/bootstrap/fonts/'"
+        });
+    </script>
 </head>
 <body>
     <div class="navbar navbar-fixed-top">
