Fully working minify

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html ng-app="goat" ng-controller="GoatController">
 <head>
-    <!--<link rel="stylesheet" href="dist/client.min.css">-->
-    <!--<script type="text/javascript" src="dist/client.min.js"></script>-->
-
-    <!--<link rel="stylesheet/less" type="text/css" href="components/vendor/bootstrap/less/bootstrap.less">-->
+    <link rel="stylesheet" href="dist/client.min.css">
+    <script type="text/javascript" src="dist/client.min.js"></script>
     <link rel="stylesheet/less" type="text/css" href="components/client.less">
 
-    <script type="text/javascript" src="components/vendor/websocket-stream/websocket-stream.js"></script>
-    <script type="text/javascript" src="services/audio-output.js"></script>
-    <script type="text/javascript" src="components/vendor/lodash/dist/lodash.js"></script>
-    <script type="text/javascript" src="components/vendor/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="components/vendor/angular/angular.js"></script>
-    <script type="text/javascript" src="components/client.js"></script>
+    <!--<script type="text/javascript" src="components/vendor/websocket-stream/websocket-stream.js"></script>-->
+    <!--<script type="text/javascript" src="services/audio-output.js"></script>-->
+    <!--<script type="text/javascript" src="components/vendor/lodash/dist/lodash.js"></script>-->
+    <!--<script type="text/javascript" src="components/vendor/jquery/dist/jquery.js"></script>-->
+    <!--<script type="text/javascript" src="components/vendor/angular/angular.js"></script>-->
+    <!--<script type="text/javascript" src="components/client.js"></script>-->
 
-    <script type="text/javascript" src="components/vendor/less/less.js"></script>
-    <script>
-        less.modifyVars({
-            '@icon-font-path': "'/components/vendor/bootstrap/fonts/'"
-        });
-    </script>
+    <!--<script type="text/javascript" src="components/vendor/less/less.js"></script>-->
 </head>
 <body>
     <div class="navbar navbar-fixed-top">
