--- a/app/client/index.html
+++ b/app/client/index.html
@@ -7,44 +7,20 @@
 
     <script type="text/javascript" src="components/vendor/websocket-stream/websocket-stream.js"></script>
     <script type="text/javascript" src="services/audio-output.js"></script>
+    <script type="text/javascript" src="services/media-player.js"></script>
     <script type="text/javascript" src="components/vendor/lodash/dist/lodash.js"></script>
     <script type="text/javascript" src="components/vendor/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="components/vendor/angular/angular.js"></script>
     <script type="text/javascript" src="components/client.js"></script>
+    <script type="text/javascript" src="components/player.js"></script>
+    <script type="text/javascript" src="components/tracklist.js"></script>
+
     <script type="text/javascript" src="components/vendor/less/less.js"></script>
 </head>
 <body>
-    <div class="navbar navbar-fixed-top">
-        <div class="container">
-            <div class="song-details">
-                {{player.media.artist}} - {{player.media.title}}
-                {{player.media.album}} ({{player.media.year}})
-            </div>
-
-            <player player="player" size="m" />
-        </div>
-    </div>
-    <div class="container">
-        <table class="tracklisting">
-            <thead>
-                <tr>
-                    <td class="song">Song</td>
-                    <td class="time">Time</td>
-                    <td class="artist">Artist</td>
-                    <td class="album">Album</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="track in tracklisting">
-                    <td>{{track.title}}</td>
-                    <td>{{track.duration}}</td>
-                    <td>{{track.artist}}</td>
-                    <td>{{track.album}}</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div ng-if="debug" ng-include="'components/debug.html'"></div>
-    <div ng-if="nodeWebkit" ng-include="'components/server.html'"></div>
+    <player controls="player" size="m"></player>
+    <tracklist source="tracks"></tracklist>
+<!--<div ng-if="debug" ng-include="'components/debug.html'"></div>-->
+<div ng-if="nodeWebkit" ng-include="'components/server.html'"></div>
 </body>
 </html>
