WIP visualiser directive
* Takes in a callback to grab an array of frequency data
* Its broken right now due to frequency and fft scaling issues
* May consider just passing in an analyser node completely so that it
can query the fft,, min and max decibels and scale itself accordingly
* Using canvas currently, but this should be fully pluggable

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="components/client.js"></script>
     <script type="text/javascript" src="components/player.js"></script>
     <script type="text/javascript" src="components/tracklist.js"></script>
+    <script type="text/javascript" src="components/visualiser.js"></script>
 
     <script type="text/javascript" src="components/vendor/less/less.js"></script>
 </head>
